; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_globals.c___xmlPedanticParserDefaultValue.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_globals.c___xmlPedanticParserDefaultValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@IS_MAIN_THREAD = common dso_local global i64 0, align 8
@xmlPedanticParserDefaultValue = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @__xmlPedanticParserDefaultValue() #0 {
  %1 = alloca i32*, align 8
  %2 = load i64, i64* @IS_MAIN_THREAD, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i32* @xmlPedanticParserDefaultValue, i32** %1, align 8
  br label %8

5:                                                ; preds = %0
  %6 = call %struct.TYPE_2__* (...) @xmlGetGlobalState()
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  store i32* %7, i32** %1, align 8
  br label %8

8:                                                ; preds = %5, %4
  %9 = load i32*, i32** %1, align 8
  ret i32* %9
}

declare dso_local %struct.TYPE_2__* @xmlGetGlobalState(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
